# rsomics-vcf-call

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs  vcf_call.rs
src/: cli.rs  lib.rs  main.rs
tests/: compat.rs
tests/golden/: mpileup.vcf.gz.tbi  small.vcf
