[package]
name = "rsomics-vcf-call"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-vcf-call"
authors = ["Zane Leong <efd@live.com>"]
description = "Bayesian SNP/indel calling from mpileup likelihoods — Rust port of bcftools call -c"

[[bin]]
name = "rsomics-vcf-call"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_call"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
clap = { version = "4", features = ["derive"] }
noodles = { version = "0.110", features = ["vcf", "bgzf", "tabix"] }

[dev-dependencies]
rsomics-common = { version = "0.6", features = ["test-support"] }
tempfile = "3"

[[bench]]
name = "vcf_call"
harness = false

[dev-dependencies.criterion]
version = "0.7"
default-features = false
features = ["cargo_bench_support"]
